[B]1.2.2[/B]
- Fixed album listing due to site changes

[B]1.2.0[/B]
- WiMP is now TIDAL: changed name and branding
- Added album year info
- Fixed featured albums view

[B]1.1.1[/B]
- Fixed playback of streams served from tidal
- Improved login functionality
- Changed search dialog to a directory

[B]1.1.0[/B]
- Added TIDAL support
- Added Lossless support
- Added "What's New", "Moods" and genre browsing
- Added options for saving username/password in settings