@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.audio.wimp" name="TIDAL" version="1.2.2" provider-name="takoi">
+<addon id="plugin.audio.wimp" name="TIDAL" version="1.2.3" provider-name="takoi">
     <requires>
         <import addon="xbmc.python" version="2.14.0"/>
         <import addon="script.module.requests" version="2.3.0"/>
